--- a/templates/comparison.html
+++ b/templates/comparison.html
@@ -63,7 +63,6 @@
                     <li class="nav-item"><a class="nav-link" href="get-started">Get Started</a></li>
                     <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
                     <li class="nav-item active"><a class="nav-link" href="comparison">Comparison</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -148,46 +147,33 @@
     <!--================End Circle Chart Area =================-->
 
     <!--================Footer Area =================-->
-    <footer class="footr_area">
+    
+    <footer class="footer_area">
         <div class="footer_widget_area">
             <div class="container">
                 <div class="row footer_widget_inner">
                     <div class="col-lg-4 col-sm-6">
                         <aside class="f_widget f_about_widget">
-                            <img src="img/footer-logo.png" alt="">
-                            <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui,
-                                vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
+                            <img src="img/logo.png" alt="">
                         </aside>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <aside class="f_widget f_insta_widget">
                             <div class="f_title">
-                                <h3>Instagram</h3>
+                                <h3>LinkedIn Profiles</h3>
                             </div>
                             <ul>
-                                <li><a href="#"><img src="img/instagram/ins-1.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-2.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-3.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-4.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-5.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-6.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-7.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-8.jpg" alt=""></a></li>
+                                <li><a href="https://www.linkedin.com/in/jackie-dong/"><img src="img/instagram/ins-1.jpg"
+                                            alt=""></a></li>
+                                <li><a href="https://www.linkedin.com/in/haroldfyoungiii/"><img src="img/instagram/ins-2.jpg"
+                                            alt=""></a></li>
+                                <li><a href="https://www.linkedin.com/in/jeff-yamada-46b96ba/"><img src="img/instagram/ins-3.jpg"
+                                            alt=""></a></li>
+                                <li><a href="https://www.linkedin.com/in/shang-wang-940b7149/"><img src="img/instagram/ins-4.jpg"
+                                            alt=""></a></li>
+                                <li><a href="https://www.linkedin.com/in/themarylin/"><img src="img/instagram/ins-5.jpg"
+                                            alt=""></a></li>
                             </ul>
-                        </aside>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <aside class="f_widget f_subs_widget">
-                            <div class="f_title">
-                                <h3>Subscribe to newsletter</h3>
-                            </div>
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Your e-mail address here"
-                                    aria-label="Your e-mail address here">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-secondary submit_btn" type="button">Subscribe</button>
-                                </span>
-                            </div>
                         </aside>
                     </div>
                 </div>
@@ -197,23 +183,14 @@
             <div class="container">
                 <div class="float-sm-left">
                     <h5>
+                        <p>Copyright | All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i>
+                            by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;<script>
                             document.write(new Date().getFullYear());
-                        </script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i>
-                        by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        </script> <a>All rights reserved by HJJMS</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </h5>
-                </div>
-                <div class="float-sm-right">
-                    <ul>
-                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
                 </div>
             </div>
         </div>
