--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -64,7 +64,7 @@
                     <li class="nav-item"><a class="nav-link" href="get-started">Get Started</a></li>
                     <li class="nav-item active"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
                     <li class="nav-item"><a class="nav-link" href="comparison">Comparison</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
+
                 </ul>
             </div>
         </nav>
@@ -84,7 +84,7 @@
     </section>
     <!--================End Banner Area =================-->
 
-    
+
 
 
     <!--================ DIS Chart Area =================-->
@@ -103,7 +103,9 @@
             <div class="shap_slider_inner owl-carousel">
                 <div class="item">
                     <h2>What is a Hidden Layer?</h2>
-                    <p>A hidden layer in an artificial neural network is a layer in between input layers and output layers, where artificial neurons take in a set of weighted inputs and produce an output through an activation function.</p>
+                    <p>A hidden layer in an artificial neural network is a layer in between input layers and output
+                        layers, where artificial neurons take in a set of weighted inputs and produce an output through
+                        an activation function.</p>
                     <div class="media">
                         <img src="img/team/people/people-5.jpg" alt="">
                         <div class="media-body">
@@ -114,7 +116,8 @@
                 </div>
                 <div class="item">
                     <h2>What are Epochs?</h2>
-                    <p>One Epoch is when an entire dataset is passed forward and backward through the neural network only once</p>
+                    <p>One Epoch is when an entire dataset is passed forward and backward through the neural network
+                        only once</p>
                     <div class="media">
                         <img src="img/team/people/people-5.jpg" alt="">
                         <div class="media-body">
@@ -125,7 +128,11 @@
                 </div>
                 <div class="item">
                     <h2>What is the Learning Rate?</h2>
-                    <p>Learning rate is a hyper-parameter that controls how much we are adjusting the weights of our network with respect the loss gradient. The lower the value, the slower we travel along the downward slope. While this might be a good idea (using a low learning rate) in terms of making sure that we do not miss any local minima, it could also mean that we'll be taking a long time to converge — especially if we get stuck on a plateau region.</p>
+                    <p>Learning rate is a hyper-parameter that controls how much we are adjusting the weights of our
+                        network with respect the loss gradient. The lower the value, the slower we travel along the
+                        downward slope. While this might be a good idea (using a low learning rate) in terms of making
+                        sure that we do not miss any local minima, it could also mean that we'll be taking a long time
+                        to converge — especially if we get stuck on a plateau region.</p>
                     <div class="media">
                         <img src="img/team/people/people-5.jpg" alt="">
                         <div class="media-body">
@@ -136,7 +143,10 @@
                 </div>
                 <div class="item">
                     <h2>What is a neuron?</h2>
-                    <p>A "neuron" in an artificial neural network is a mathematical approximation of a biological neuron. It takes a vector of inputs, performs a transformation on them, and outputs a single scalar value. It can be thought of as a filter. Typically we use nonlinear filters in neural networks.</p>
+                    <p>A "neuron" in an artificial neural network is a mathematical approximation of a biological
+                        neuron. It takes a vector of inputs, performs a transformation on them, and outputs a single
+                        scalar value. It can be thought of as a filter. Typically we use nonlinear filters in neural
+                        networks.</p>
                     <div class="media">
                         <img src="img/team/people/people-5.jpg" alt="">
                         <div class="media-body">
@@ -155,7 +165,8 @@
                         <h6>Our Algorithm</h6>
                         <h2>Adjusted Closing Price</h2>
                     </div>
-                    <p>Our Neural Network takes into account the S&P 500 Index, trains based on a 75:25, and returns a prediction based on the next day.</p>
+                    <p>Our Neural Network takes into account the S&P 500 Index, trains based on a 75:25, and returns a
+                        prediction based on the next day.</p>
                 </div>
                 <div class="shap_mobile">
                     <img src="img/iphone4.png" alt="">
@@ -258,46 +269,34 @@
 
 
     <!--================Footer Area =================-->
-    <footer class="footr_area">
+
+    
+    <footer class="footer_area">
         <div class="footer_widget_area">
             <div class="container">
                 <div class="row footer_widget_inner">
                     <div class="col-lg-4 col-sm-6">
                         <aside class="f_widget f_about_widget">
-                            <img src="img/footer-logo.png" alt="">
-                            <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui,
-                                vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
+                            <img src="img/logo.png" alt="">
                         </aside>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <aside class="f_widget f_insta_widget">
                             <div class="f_title">
-                                <h3>Instagram</h3>
+                                <h3>LinkedIn Profiles</h3>
                             </div>
                             <ul>
-                                <li><a href="#"><img src="img/instagram/ins-1.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-2.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-3.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-4.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-5.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-6.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-7.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="img/instagram/ins-8.jpg" alt=""></a></li>
+                                <li><a href="https://www.linkedin.com/in/jackie-dong/"><img src="img/instagram/ins-1.jpg"
+                                            alt=""></a></li>
+                                <li><a href="https://www.linkedin.com/in/haroldfyoungiii/"><img src="img/instagram/ins-2.jpg"
+                                            alt=""></a></li>
+                                <li><a href="https://www.linkedin.com/in/jeff-yamada-46b96ba/"><img src="img/instagram/ins-3.jpg"
+                                            alt=""></a></li>
+                                <li><a href="https://www.linkedin.com/in/shang-wang-940b7149/"><img src="img/instagram/ins-4.jpg"
+                                            alt=""></a></li>
+                                <li><a href="https://www.linkedin.com/in/themarylin/"><img src="img/instagram/ins-5.jpg"
+                                            alt=""></a></li>
                             </ul>
-                        </aside>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <aside class="f_widget f_subs_widget">
-                            <div class="f_title">
-                                <h3>Subscribe to newsletter</h3>
-                            </div>
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Your e-mail address here"
-                                    aria-label="Your e-mail address here">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-secondary submit_btn" type="button">Subscribe</button>
-                                </span>
-                            </div>
                         </aside>
                     </div>
                 </div>
@@ -307,23 +306,14 @@
             <div class="container">
                 <div class="float-sm-left">
                     <h5>
+                        <p>Copyright | All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i>
+                            by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;<script>
                             document.write(new Date().getFullYear());
-                        </script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i>
-                        by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        </script> <a>All rights reserved by HJJMS</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </h5>
-                </div>
-                <div class="float-sm-right">
-                    <ul>
-                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
                 </div>
             </div>
         </div>
