front-end clean up

--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -165,23 +165,13 @@
                         prediction based on the next day.</p>
                 </div>
                 <div class="shap_mobile">
-                    <img src="img/iphone4.png" alt="">
+                    <img src="img/machinelearning.png" alt="">
                 </div>
             </div>
         </div>
     </section>
 
     <!--================End The best slider Area =================-->
-
-
-    <!--================ Video Area =================-->
-    <section class="video_area">
-        <div class="c_video">
-            <a class="popup-youtube" href="https://www.youtube.com/watch?v=62QYQE6k7tg"><img src="img/icon/video-icon.png"
-                    alt=""> How does our Machine Learning Work </a>
-        </div>
-    </section>
-    <!--================ End Video Area =================-->
 
 
     <!--================ Build your Network Area =================-->
