--- a/templates/comparison.html
+++ b/templates/comparison.html
@@ -102,7 +102,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
-                    <div class="circle_progress circular style-polygon" data-percentage="893" data-thickness="3"
+                    <div class="circle_progress circular style-polygon" dpercentage="893" data-thickness="3"
                         data-reverse="true" data-empty-fill="transparent" data-start-color="#987dff" data-end-color="#7acaff">
                         <div class="circle_progress_inner">
                             <strong></strong>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
-                    <div class="circle_progress circular style-polygon" data-percentage="13" data-thickness="3"
+                    <div id="random_percent" class="circle_progress circular style-polygon" dpercentage="0" data-thickness="3"
                         data-reverse="true" data-empty-fill="transparent" data-start-color="#987dff" data-end-color="#7acaff">
                         <div class="circle_progress_inner">
                             <strong></strong>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
-                    <div class="circle_progress circular style-polygon" data-percentage="10.47" data-thickness="3"
+                    <div class="circle_progress circular style-polygon" dpercentage="10.47" data-thickness="3"
                         data-reverse="true" data-empty-fill="transparent" data-start-color="#987dff" data-end-color="#7acaff">
                         <div class="circle_progress_inner">
                             <strong></strong>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
-                    <div class="circle_progress circular style-polygon" data-percentage="51.76" data-thickness="3"
+                    <div class="circle_progress circular style-polygon" dpercentage="51.76" data-thickness="3"
                         data-reverse="true" data-empty-fill="transparent" data-start-color="#987dff" data-end-color="#7acaff">
                         <div class="circle_progress_inner">
                             <strong></strong>
