app.py route edit

--- a/templates/apiendpoints.html
+++ b/templates/apiendpoints.html
@@ -78,8 +78,8 @@
             <div class="row">
                 <ul>
                     <li>
-                        <p>Historical DIS stock prices</p>
-                        <a href="/api">/api</a>
+                        <p>Historical stock prices: ticker query</p>
+                        <a href="/api?stock=DIS">/api?stock={stock}</a>
                     </li>
                     <br>
                     <li>
